--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -51,3 +51,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+
+      - name: Fetch release version
+        id: versioning
+        run: |
+          $branchName = '${{ github.ref }}' # refs/heads/release/0.0.0
+
+          if ($branchName -match 'refs/heads/release/(.+)') {
+            $version = $Matches[1]
+            Write-Host "VERSION=$version" >> $GITHUB_ENV
+            echo "::set-output name=version::$version"
+          } else {
+            throw "Branch name is not in the expected format: refs/heads/release/*.*.*"
+          }
+
+      - name: Build release
+        run: pnpm run build
+
+      - name: Upload release artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: RichillCapital.Admin.Web-${{ steps.versioning.outputs.version }}
+          path: ./.output
