--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -64,6 +64,11 @@ jobs:
           } else {
             throw "Branch name is not in the expected format: refs/heads/release/*.*.*"
           }
+          
+      - name: Install dependencies
+        run: |
+          npm i -g pnpm 
+          pnpm i
 
       - name: Build release
         run: pnpm run build
